# moe-routing

./: .gitignore  .gitmodules  README.md  analyze.ipynb  analyze_dpsk.ipynb  analyze_exp_affinity.ipynb  analyze_exp_count.ipynb  analyze_qwen3_less_k.ipynb  debug_sim.ipynb  debug_sim_model_generate_assistgen.ipynb  eval_ceval_spec_topk.py  eval_ceval_spec_topk_duckdb_full.py  exp_count.py  main.py  parse_json.sh  profile_qwen3_logits.py  pyproject.toml  scc_submit.sh
configs/: ppl_to_ks.py  self_ppl_to_ks.py
customizations/: deepseek.py  deepseek_moe.py
scripts/affinity/: exp_count.py
scripts/coactivation/: exp_affinity.py  plot_c2r_greedy.py
scripts/dataset/: gen_ceval_topks.py  gen_think_answer_ceval.py  gen_think_ceval.py
scripts/dyn_topk/: analyze_qwen3_less_k.ipynb  calc_samples_json_resps_length.py  debug_sim_duckdb_specgen.ipynb  debug_sim_model_generate_assistgen.ipynb  display_token_ppls.py  eval_ceval_full.py  eval_ceval_spec_topk.py  eval_ceval_spec_topk_duckdb_full.py
scripts/dyn_topk/search/: convert_4d_to_6d.py  find_optimal_layermask.py  layer_masks.json  opt_policy.py  opt_policy_botorch.py  opt_policy_botorch_layerwise.py  opt_policy_lmeval.py  plot_botorch.py  plot_botorch_ng.py  plot_search.py  plot_search_dims.py  plot_search_space_uncolored.py  process_data.sh  search.json  search_policy.py
scripts/dyn_topk/simulated_bench/: benchmark_qwen3_less_k.py  profile_qwen3_logits.py
scripts/dyn_topk/token_entropy/: analyze_ceval_subjects.ipynb  plot_token_ppls_hist.py  stat_logprobs.py  stat_logprobs2.py
scripts/experiments/1_main_results/: parse_results_bench.py  plot_main_res.py  plot_main_res.sh
scripts/experiments/2_topk_acceptance/: calc_pareto.py  plot_topk_vs_acc.py  run_plot_topk_vs_acc.sh  stat_pareto.sh
scripts/experiments/4_latency_breakdown/: plot_latency_breakdown.py  plot_latency_breakdown.sh
scripts/lm_eval/: generate_report.py
scripts/plot/: plot_main_res.py
scripts/quick/: bench_serve.sh  lmeval.sh
scripts/rout_scores/: benchmark_qwen3_less_k.py  process_dataset_for_chat.py  profile_ceval_topks.py  profile_deepseek.py  profile_deepseek_moe.py  profile_lmsys.py  profile_reasoning.py
scripts/rout_scores/analysis/: analyze.ipynb
