[project]
name = "moe-routing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autoawq>=0.2.9",
    "datasets>=3.6.0",
    "flash-attn>=2.7.4.post1",
    "matplotlib>=3.10.3",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "libcst>=1.8.2",
    "ruff>=0.12.2",
]

[tool.uv]
index-url = "https://mirrors.sustech.edu.cn/pypi/web/simple"
no-build-isolation-package = ['flash-attn']
