[project]
name = "moe-routing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autoawq>=0.2.9",
    "cuda-bindings<13",
    "datasets>=3.6.0",
    "deep-ep",
    "duckdb>=1.3.1",
    "flash-attn>=2.8.3",
    "flashinfer-python>=0.3.1.post1",
    "frozendict>=2.4.6",
    "jinja2>=3.1.6",
    "lm-eval[api,longbench,ifeval]",
    "matplotlib>=3.10.3",
    "nvidia-nvshmem-cu12>=3.3.20",
    "nvshmem4py-cu12>=0.2.0",
    "pplx-kernels",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "tqdm>=4.67.1",
    "transformers",
    "peft>=0.18.1",
    "vllm",
    "botorch>=0.17.2",
    "torch==2.9.1",
]

[dependency-groups]
dev = [
    "cmake>=4.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "libcst>=1.8.2",
    "modelscope>=1.32.0",
    "py-spy>=0.4.1",
    "ruff>=0.12.2",
    "setuptools-scm>=9.2.0",
]

[tool.uv]
index-url = "https://mirrors.sustech.edu.cn/pypi/web/simple"
no-build-isolation-package = ['flash-attn', 'pplx-kernels', 'deep-ep', 'vllm']

[tool.uv.sources]
lm-eval = { path = "lm-evaluation-harness", editable = true }
transformers = { path = "transformers", editable = true }
deep-ep = { path = "deep-ep", editable = true }
pplx-kernels = { path = "pplx-kernels", editable = true }
vllm = { path = "vllm", editable = true }
